--- a/main.tex
+++ b/main.tex
@@ -324,11 +324,12 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 
 \section{K-vectors and K-forms}
 
-Let $\Phi \in F_2$ be a function for magnetic flux; that is, the "flow" of magnetic field through some surface, and let $\sigma \in S^2$ be such a surface. Mechanically, this is another example of a k-functional being passed a k-surface, and returning a real number. So, we may write that $\Phi(\sigma) = \Phi(\sigma^1) + \Phi(\sigma^2) + \Phi(\sigma^3) + ... = \sum_{i=1}^n \Phi(\sigma^i)$, which equals $\int_\sigma B(d\sigma)$ as n tends to infinity. This appears to be identical to the case where k=1. The difference comes in by realizing that the surface $\sigma$ may not be broken up into infinitesimal line elements. Rather, we have to use infinitesimal paralellograms. Just as $\Phi$ is a 2-functional and $\sigma$ a 2-surface, we call the infinitesimal parallelograms d$\sigma$ 2-vectors, and B a 2-form. Incidentally, just as work 1-functional became force as a covector (in other words, a 1-form), the flux as a 2-functional became the magnetic field as a 2-form. We see that the general relationship between forms and functionals, and vectors and surfaces carries over into the two dimensional case. 
+Let $\Phi \in F_2$ be a functional for magnetic flux; that is, the function that gives the "flow" of magnetic field through some surface, and let $\sigma \in S^2$ be such a surface. Mechanically, this is another example of a k-functional being passed a k-surface, and returning a real number. So, we may write that $\Phi(\sigma) = \Phi(\sigma^1) + \Phi(\sigma^2) + \Phi(\sigma^3) + ... = \sum_{i=1}^n \Phi(\sigma^i)$, which equals $\int_\sigma B(d\sigma)$ as n tends to infinity. This appears to be identical to the case where k=1. The difference comes in by realizing that the surface $\sigma$ may not be broken up into infinitesimal line elements. Rather, we have to use infinitesimal paralellograms. Just as $\Phi$ is a 2-functional and $\sigma$ a 2-surface, we call the infinitesimal parallelograms d$\sigma$ 2-vectors, and B a 2-form. Incidentally, just as the work 1-functional became force as a covector (in other words, a 1-form), the flux as a 2-functional became the magnetic field as a 2-form. We see that the general relationship between forms and functionals, and vectors and surfaces carries over into the two dimensional case. 
+\emph{Probably pretty good to clarify that B is a matrix; i.e. part of the electromagnetic field tensor. Specify that we're not talking about B as a pseudovector, as it doesn't generalize to more dimensions}
 
 We propose that in the general kth case, we can through integration connect our forms with functionals, and vectors with surfaces. Let $f_k \in F_k$ be a k-functional and $\sigma^k \in S^k$ a k-surface. We can say that $f_k(\sigma^k) = \sum_{i=1}^n f_k(\sigma^k_n) = \int_{\sigma^k} \omega_k(d\sigma^k)$ as n tends to infinity for some function $\omega_k$. We call $\omega_k$ a \textbf{k-form}, and d$\sigma^k$ a \textbf{k-vector}. 
 
-Using line segments or parallelograms as our infinitesimal elements is not sufficient on a k-surface. At this point, we must make use of infinitesimal \emph{parallelepipeds}: a k-dimensional shape whose sides are (k-1)-parallelepipeds. Whereas before when the line segments would be stuck end-to-end, the parallelepipeds will be stuck side-to-side, such that one side of one parallelepiped makes up one side of the other. With some hand-waviness, we can say that the infinitesimal elements in the cases of k=1 and k=2 are still parallelepipeds. In the case of k = 1, an infinitesimal segment may be thought of as a parallelepiped without width or heighth. By that same thinking, when k = 2, an infinitesimal area on a 2-surface may be thought of as a parallelepiped without height. 
+Using line segments or parallelograms as our infinitesimal elements is not sufficient on a k-surface. At this point, we must make use of infinitesimal \emph{parallelepipeds}: a k-dimensional shape whose sides are (k-1)-parallelepipeds. Whereas before when the line segments would be stuck end-to-end, the parallelepipeds will be stuck side-to-side, such that one side of one parallelepiped makes up one side of the other. With some hand-waviness, we can say that the infinitesimal elements in the cases of k=1 and k=2 are still parallelepipeds. In the case of k = 1, an infinitesimal segment may be thought of as a parallelepiped without width or height. By that same thinking, when k = 2, an infinitesimal area on a 2-surface may be thought of as a parallelepiped without height. 
 
 
 \begin{defn}
@@ -374,6 +375,7 @@ It may seem that the cross product in multivariable calculus and the wedge produ
 
 To finish up the generalization of the previous section, we establish the relationship between k-functionals and k-forms, between k-surfaces and k-vectors. The latter two are infinitesimal variants of the former two, and are related to one another by an integral. 
 
+\textbf{2.11 can be moved up to the discussion on k-forms and k-vectors, and then ending this section with wedge product stuff}
 \begin{prop}
 	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
 \end{prop}
@@ -389,11 +391,12 @@ NOTE: Will have to talk about what the basis is. We start by saying that in a ne
 Up until this point in our discussion of k-forms and k-vectors, we've remained in a general coordinate-free form. For a conceptual understanding of the tools in use, this is just fine, and is in fact preferable. It shows that the math up until this point is "universal," and can be applied to any frame of reference without sacrificing scientific validity. Furthermore, it should be noted that nature itself is coordinate-free. The universe doesn't come prepackaged with coordinates, rather they are something that humans have created to streamline scientific investigation. The caveat to this is that while coordinate-free works well for conceptual understanding, it isn't all that useful for solving actual problems in physics, which is the entire point. Therefore, in this section, we will begin imposing coordinates on the systems we're working with. 
 
 
-Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $d\lambda$ be a vector starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $d\lambda$. Mathematically, this relates to defining the coordinate system in terms of \textbf{basis vectors}, and assigning $d\lambda$ directional components along each basis vector, the sum of which gives us $d\lambda$. So, $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$. Such notation can be used any time there is a matching upper and lower index. This is Einstein Summation Convention, and is heavily used throughout physics. It is therefore necessary to become comfortable with it.}, where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis. Basis vectors as used here are therefore covectors, and the vector compoments are vectors. In other words, we can say that $e_i$ gives us an infinitesimal segment along lines of $x^i$. 
+Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $d\lambda$ be a vector starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $d\lambda$. Mathematically, this relates to defining the coordinate system in terms of \textbf{basis vectors}, and assigning $d\lambda$ directional components along each basis vector, the sum of which gives us $d\lambda$. So, $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$,\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$. Such notation can be used any time there is a matching upper and lower index. This is Einstein Summation Convention, and is heavily used throughout physics. It is therefore necessary to become comfortable with it.} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis. Basis vectors as used here are therefore covectors, and the vector compoments are vectors. In other words, we can say that $e_i$ gives us an infinitesimal segment along lines of $x^i$. \textbf{Not true, if $e_i$ were an infinitesimal line segment, and we multiplied it by another $dx^i$, then $d\lambda$ would be a second order infinitesimal. $e_i$ is a function that takes a number and gives the line segment. We can say that $dx^1 e_1$ gives an infinitesimal segment along $x^1$. Another anology, the coordinate system is something that can take a set of coordinates, and give a point; a map from n numbers to a point. A basis is a function from n numbers to a vector, and the $dx^i$s are the numbers. We can use this to define vector basis}
+\emph{$e_i$ is a vector, not a covector, despite what the lower index may say. That's a sum, not an inner product}
 
 
-
-Functions will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is still a basis vector, though for the purposes of handling coordinates in a k-form, is not itself a covector. It does function similarly to $e_i$, however, when it is applied to an infinitesimal segment $d\lambda$. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j\footnote{This is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise} = dx^i$.
+Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is a basis covector. It does function similarly to $e_i$, however, when it is applied to an infinitesimal segment $d\lambda$. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j\footnote{This is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise} = dx^i$.
+\textbf{Basis covector is the form that returns the ith component}
 
 Putting everything together now, for infinitesimal segment d$\lambda$ and k-form $\omega$, $\omega(d\lambda) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a summation of functions applied over infinitesimal segments. 
 
@@ -477,6 +480,10 @@ NOTES on tensors: Talking about tensors as multilinear maps makes it so that vec
 \end{coro}
 
 - In general, objects associated with covariant tensors will have a lower index, and those associated with contravariant tensors will have an upper index. 
+
+
+
+\textbf{Make a section on EnM here (both relativistic and nonrelativistic), just to be able to demonstrate how all the math works}
 
 
 
