--- a/main.tex
+++ b/main.tex
@@ -500,6 +500,8 @@ NOTES on tensors: Talking about tensors as multilinear maps makes it so that vec
 
 \section{Electricity and Magnetism}
 
+\textbf{In order to do this, need a hodge dual, so need perpendicular, so need a metric. Otherwise can only have curl of E equals derivative of B in t. }
+
 - We have work, this relates to force, and the electric field (magnetic field does no work)
 
 - We can relate the electric force to a potential using the boundary functional (i.e. $f_e = -\eth\phi$)
@@ -507,6 +509,7 @@ NOTES on tensors: Talking about tensors as multilinear maps makes it so that vec
 - Define the field strength tensor
 
 
+\textbf{NOTE: In fluid dynamics for divergenceless fluid, there's something called stream functions}
 
 
 
